--- a/src/app/pages/main/settings/privacy/upload-certificates/upload-certificates.component.html
+++ b/src/app/pages/main/settings/privacy/upload-certificates/upload-certificates.component.html
@@ -1,6 +1,6 @@
 
 
-<p-panel [toggleable]="true" header="Update Profile">
+<p-panel [toggleable]="true" header="Upload Certificate">
     <ng-template pTemplate="header">
         <div class="flex align-items-center gap-2 mr-3">
             <i class="pi pi-receipt text-primary text-3xl"></i>
