--- a/src/app/pages/main/settings/settings.component.html
+++ b/src/app/pages/main/settings/settings.component.html
@@ -1,11 +1,13 @@
 <div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
-    <div pRipple class="relative overflow-hidden w-full p-link flex align-items-center p-2 text-color border-noround mb-5">
-        <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
+
+    <div pRipple class="relative overflow-hidden w-full p-link flex align-items-center p-4 text-color border-noround mb-5">
+        <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-4" shape="circle" size="xlarge" />
         <span class="inline-flex flex-column">
-            <span class="font-bold">{{ userName }}</span>
-            <span class="text-sm">{{ userRole }}</span>
+          <span class="font-bold text-xl">{{ userName }}</span>
+          <span class="text-base  text-md">{{ userRole }}</span>
         </span>
     </div>
+      
 
     <div class="grid grid-nogutter">
         <!-- Sidebar Column -->
