--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -27,16 +27,16 @@
                         <div class="surface-card shadow-2 p-3 border-round">
                             <div class="flex justify-content-between">
                                 <div>
-                                    <div class="mb-3" [ngClass]="'text-green-500' + ' text-5xl'">2000</div>
+                                    <div class="mb-3" [ngClass]="'text-blue-500' + ' text-5xl'">2000</div>
                                     <span class="block text-500 font-medium">Fitted</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
-                                    [ngClass]="'bg-green-100' + ' border-round'" style="width:5rem;height:5rem">
-                                    <i class="pi pi-car" [ngClass]="'text-green-500' + ' text-5xl'"></i>
+                                    [ngClass]="'bg-blue-100' + ' border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi pi-car" [ngClass]="'text-blue-500' + ' text-5xl'"></i>
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-cyan-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-blue-500 h-full" style="width: 64%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
@@ -44,16 +44,16 @@
                         <div class="surface-card shadow-2 p-3 border-round">
                             <div class="flex justify-content-between">
                                 <div>
-                                    <div class="mb-3" [ngClass]="'text-green-500' + ' text-5xl'">0</div>
+                                    <div class="mb-3" [ngClass]="'text-purple-500' + ' text-5xl'">0</div>
                                     <span class="block text-500 font-medium">Balanced</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
-                                    [ngClass]="'bg-green-100' + ' border-round'" style="width:5rem;height:5rem">
-                                    <i class="pi pi-car" [ngClass]="'text-green-500' + ' text-5xl'"></i>
+                                    [ngClass]="'bg-purple-100' + ' border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi pi-car" [ngClass]="'text-purple-500' + ' text-5xl'"></i>
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-cyan-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-purple-500 h-full" style="width: 64%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
@@ -76,7 +76,7 @@
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-cyan-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-green-500 h-full" style="width: 64%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
@@ -84,16 +84,16 @@
                         <div class="surface-card shadow-2 p-3 border-round">
                             <div class="flex justify-content-between">
                                 <div>
-                                    <div class="mb-3" [ngClass]="'text-green-500' + ' text-5xl'">0</div>
+                                    <div class="mb-3" [ngClass]="'text-red-500' + ' text-5xl'">0</div>
                                     <span class="block text-500 font-medium">Not Resolved</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
-                                    [ngClass]="'bg-green-100' + ' border-round'" style="width:5rem;height:5rem">
-                                    <i class="pi pi-car" [ngClass]="'text-green-500' + ' text-5xl'"></i>
+                                    [ngClass]="'bg-red-100' + ' border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi pi-car" [ngClass]="'text-red-500' + ' text-5xl'"></i>
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-cyan-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-red-500 h-full" style="width: 64%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
 
 
     <div class="grid nested-grid">
-        <div class="col-12 md:col-5 lg:col-5">
+        <div class="col-12 md:col-6 lg:col-5">
             <p-panel header="Vehicle Type Wise Installation">
                 <ng-template pTemplate="icons">
                     <button class="p-panel-header-icon p-link mr-2">
@@ -162,12 +162,10 @@
             <div class="grid">
                 <div class="col-12 lg:col-8">
                     <p-panel header="Renewal Status">
-                        <div id="chart">
                             <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart"
                                 [labels]="chartOptions.labels" [fill]="chartOptions.fill"
-                                [dataLabels]="chartOptions.dataLabels"
+                                [dataLabels]="chartOptions.dataLabels"  [legend]="chartOptions.legend"
                                 [responsive]="chartOptions.responsive"></apx-chart>
-                        </div>
                     </p-panel>
                 </div>
                 <div class="col-12 lg:col-4">
@@ -181,7 +179,7 @@
                                                 <div [ngClass]="'text-green-500 text-white' + ' text-2xl'">{{item.key}}</div>
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
-                                                <div [ngClass]="'text-green-500 text-white' + ' text-5xl'">{{item.value}}</div>
+                                                <div class="text-green-500 text-white text-5xl font-bold ">{{item.value}}</div>
                                             </div>
                                         </div>
                                     </div>
@@ -193,7 +191,7 @@
                 <div class="col-12">
                     <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
-                            <div class="surface-card shadow-2 p-3 border-round">
+                            <div class="surface-card shadow-2 border-round">
                                 <div class="h-20rem md:h-30rem lg:h-40rem" leaflet (leafletMapReady)="onMapReady($event)"
                                     [leafletOptions]="leafletOptions">
                                 </div>
