--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="surface-ground px-4 py-5 md:px-6 lg:px-8">
+<div class=" bg-gray-200 px-4 py-5 md:px-6 lg:px-8">
 
     <div class="grid mb-4">
         @for (vehicle of vehicleStatusOverview; track $index) {
@@ -7,7 +7,7 @@
                 <div class="flex justify-content-between">
                     <div>
                         <div class="mb-3" [ngClass]="vehicle.textColorClass + ' text-5xl'">{{ vehicle.count }}</div>
-                        <span class="block text-500 font-medium">{{ vehicle.label }}</span>
+                        <span style="font-family: 'Urbanist', sans-serif;" class="block text-2xl text-500 font-bold">{{ vehicle.label }}</span>
                     </div>
                     <div class="flex align-items-center justify-content-center"
                         [ngClass]="vehicle.bgColorClass + ' border-round'" style="width:5rem;height:5rem">
@@ -21,42 +21,47 @@
 
     <div class="grid mb-4">
         <div class="col-12 md:col-6 lg:col-5">
-            <p-panel header="Total Inventory">
+            <p-panel styleClass="shadow-3 border-round-3xl">
+
+                <ng-template pTemplate="header">
+                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Inventory</span>
+                </ng-template>
+                
                 <ng-template pTemplate="icons">
-                    <span class="text-3xl text-indigo-500 font-bold">0</span>
+                    <span class="text-3xl text-indigo-500 font-bold">10000</span>
                 </ng-template>
                 <div class="grid">
-                    <div class="col-12 md:col-6 lg:col-6">
-                        <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="col-12 md:col-6 lg:col-6 ">
+                        <div class="shadow-2 p-3 border-round surface-300">
                             <div class="flex justify-content-between">
                                 <div>
-                                    <div class="mb-3" [ngClass]="'text-blue-500' + ' text-5xl'">0</div>
-                                    <span class="block text-500 font-medium">Fitted</span>
+                                    <div class="mb-3" [ngClass]="'text-green-500' + ' text-5xl'">123456</div>
+                                    <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">Fitted</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
-                                    [ngClass]="'bg-blue-100' + ' border-round'" style="width:5rem;height:5rem">
-                                    <i class="pi pi-hammer" [ngClass]="'text-blue-500' + ' text-5xl'"></i>
+                                    [ngClass]="'bg-green-100' + ' border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi pi-hammer" [ngClass]="'text-green-500' + ' text-5xl'"></i>
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-blue-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-green-500 h-full" style="width: 100%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 md:col-6 lg:col-6">
-                        <div class="surface-card shadow-2 p-3 border-round">
+                        <div class="surface-300 shadow-2 p-3 border-round">
                             <div class="flex justify-content-between">
                                 <div>
-                                    <div class="mb-3" [ngClass]="'text-purple-500' + ' text-5xl'">0</div>
-                                    <span class="block text-500 font-medium">Balanced</span>
+                                    <div class="mb-3" [ngClass]="'text-yellow-500' + ' text-5xl'">123456</div>
+                                    <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">Balanced</span>
                                 </div>
                                 <div class="flex align-items-center justify-content-center"
-                                    [ngClass]="'bg-purple-100' + ' border-round'" style="width:5rem;height:5rem">
-                                    <i class="pi pi-list-check" [ngClass]="'text-purple-500' + ' text-5xl'"></i>
+                                    [ngClass]="'bg-yellow-100' + ' border-round'" style="width:5rem;height:5rem">
+                                    <i class="pi pi-list-check" [ngClass]="'text-yellow-500' + ' text-5xl'"></i>
                                 </div>
                             </div>
                             <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
-                                <div class="bg-purple-500 h-full" style="width: 64%; border-radius: 4px;"></div>
+                                <div class="bg-yellow-500 h-full" style="width: 100%; border-radius: 4px;"></div>
                             </div>
                         </div>
                     </div>
@@ -64,17 +69,20 @@
             </p-panel>
         </div>
         <div class="col-12 md:col-6 lg:col-5">
-            <p-panel header="Total Complaint Lodge">
+            <p-panel styleClass="shadow-3 border-round-3xl">
+                <ng-template pTemplate="header">
+                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Complaint Lodge</span>
+                </ng-template>
                 <ng-template pTemplate="icons">
-                  <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints }}</span>
+                  <span class="text-3xl text-indigo-500 font-bold">{{ totalComplaints || 1000 }}</span>
                 </ng-template>
                 <div class="grid">
                   <div *ngFor="let stat of complaintStats" class="col-12 md:col-6 lg:col-6">
-                    <div class="surface-card shadow-2 p-3 border-round">
+                    <div class="surface-300 shadow-2 p-3 border-round">
                       <div class="flex justify-content-between">
                         <div>
                           <div class="mb-3" [ngClass]="'text-' + stat.colorClass + '-500 text-5xl'">{{ stat.count }}</div>
-                          <span class="block text-500 font-medium">{{ stat.status }}</span>
+                          <span style="font-family: 'Urbanist', sans-serif;" class="block text-500 font-bold text-2xl">{{ stat.status }}</span>
                         </div>
                         <div class="flex align-items-center justify-content-center"
                              [ngClass]="'bg-' + stat.colorClass + '-100 border-round'" style="width:5rem;height:5rem">
@@ -83,7 +91,7 @@
                       </div>
                       <div class="surface-300 w-full mt-4" style="height: 7px; border-radius: 4px;">
                         <div [ngClass]="'bg-' + stat.colorClass + '-500 h-full'" 
-                             [style.width.%]="(stat.count / totalComplaints) * 100" style="border-radius: 4px;"></div>
+                             [style.width.%]="'100%'" style="border-radius: 4px;"></div>
                       </div>
                     </div>
                   </div>
@@ -95,12 +103,12 @@
             <div class="p-3 border-round bg-red-500">
                 <div class="flex justify-content-between">
                     <div class="flex align-items-center justify-content-center" [ngClass]="' border-circle'"
-                        style="width:14rem;height:14rem">
-                        <span [ngClass]="'text-white' + ' text-7xl font-bold'">SOS</span>
+                        style="width:14rem;height:16rem">
+                        <span style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-white' + ' text-7xl font-bold'">SOS</span>
                     </div>
                     <div class="flex align-items-center justify-content-center" [ngClass]="'bg-white' + ' border-round'"
-                        style="width:14rem;height:14rem">
-                        <span [ngClass]="'text-red-500 font-bold' + ' text-7xl'">1000</span>
+                        style="width:14rem;height:16rem">
+                        <span  style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-red-500 font-bold' + ' text-7xl'">1000</span>
                     </div>
                 </div>
             </div>
@@ -111,7 +119,10 @@
 
     <div class="grid nested-grid">
         <div class="col-12 md:col-6 lg:col-5">
-            <p-panel header="Vehicle Type Wise Installation">
+            <p-panel styleClass="shadow-3 border-round-3xl">
+                <ng-template pTemplate="header">
+                    <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Vehicle Type Wise Installation</span>
+                </ng-template>
                 <ng-template pTemplate="icons">
                     <button class="p-panel-header-icon p-link mr-2">
                         <span class="pi pi-filter"></span>
@@ -119,29 +130,29 @@
                 </ng-template>
                 <div class="grid">
                     <div class="col-12 md:col-6 lg:col-6">
-                        <h2>Total Vehicles</h2>
+                        <h2 style="font-family: 'Urbanist', sans-serif;">Total Vehicles</h2>
                         <div class="flex justify-content-center align-items-center">
                             <p-knob [(ngModel)]="totalvehicleInstallation" [readonly]="true" [size]="300" [strokeWidth]="10" />
                         </div>
                     </div>
                     <div class="col-12 md:col-6 lg:col-6">
-                        <div style="height: 665px;" class="p-5 overflow-auto">
+                        <div style="height: 570px;" class="p-5 overflow-auto">
                             @for (vehicle of vehicleInstallationTypes; track $index) {
-                            <div class="col-12 md:col-12 lg:col-12">
-                                <div class="surface-card shadow-2 p-3 border-round">
-                                    <div class="flex justify-content-between">
-                                        <div>
-                                            <div class="mb-3" [ngClass]="' text-5xl'">{{ vehicle.deviceCount }}</div>
-                                            <span class="block text-500 font-medium">{{ vehicle.categoryName }}</span>
+                                <div class="col-12 md:col-12 lg:col-12">
+                                    <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between">
+                                        <!-- Left side: Progress bar -->
+                                        <div class="mr-3" style="width: 10px; height: 50px; border-radius: 4px; background-color: #e0e0e0;">
+                                            <div class="bg-green-500" style="width: 100%; height: 100%; border-radius: 4px;"></div> <!-- Adjust height for progress -->
                                         </div>
-                                        <div class="flex align-items-center justify-content-center"
-                                            [ngClass]="' border-round'"
-                                            style="width:4rem;height:4rem">
-                                            <i class="pi pi-car" [ngClass]="' text-4xl'"></i>
+                                    
+                                        <!-- Right side: Title and count -->
+                                        <div class="flex flex-column justify-content-center align-items-end p-3">
+                                            <span class="text-lg mb-2">{{vehicle.deviceCount}}</span>
+                                            <span class="text-xl font-bold">{{vehicle.categoryName}}</span>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                                
                             }
                         </div>
                     </div>
@@ -150,23 +161,32 @@
         </div>
         <div class="col-12 md:col-7 lg:col-7">
             <div class="grid">
-                <div class="col-12 lg:col-8">
-                    <p-panel header="Renewal Status">
+                <div class="col-12 lg:col-5">
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Renewal Status</span>
+                        </ng-template>
                             <apx-chart [series]="chartOptions.series" [chart]="chartOptions.chart"
-                                [labels]="chartOptions.labels" [fill]="chartOptions.fill"
+                                [labels]="chartOptions.labels" [fill]="chartOptions.fill" [colors]="chartOptions.colors"
                                 [dataLabels]="chartOptions.dataLabels"  [legend]="chartOptions.legend"
                                 [responsive]="chartOptions.responsive"></apx-chart>
                     </p-panel>
                 </div>
+
+                
+                
                 <div class="col-12 lg:col-4">
-                    <p-panel header="Total Registration">
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Total Registration</span>
+                        </ng-template>
                         <div class="p-4">
-                            @for (item of totalRegistrationObject | keyvalue; track $index) {
-                                <div class="col-12 md:col-12 lg:col-12">
-                                    <div class="p-3 bg-green-700 border-round">
+                            @for (item of totalRegistrationObject; track $index) {
+                                <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 ' + item.bgColor">
+                                    <div class="p-3 border-round">
                                         <div class="flex justify-content-between">
                                             <div class="flex align-items-center justify-content-center">
-                                                <div [ngClass]="'text-green-500 text-white' + ' text-2xl'">{{item.key}}</div>
+                                                <div style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-green-500 text-white' + ' text-2xl'">{{item.key}}</div>
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
                                                 <div class="text-green-500 text-white text-5xl font-bold ">{{item.value}}</div>
@@ -178,6 +198,20 @@
                         </div>
                     </p-panel>
                 </div>
+
+                <div class="col-12 lg:col-3">
+                    <p-panel styleClass="shadow-3 border-round-3xl">
+                        <ng-template pTemplate="header">
+                            <span class="text-3xl font-bold" style="font-family: 'Urbanist', sans-serif;">Alert</span>
+                        </ng-template>
+                        <div style="height: 168px;" class="p-3 border-round bg-yellow-500">
+                                <div class="flex justify-content-center align-items-center">
+                                    <span style="font-family: 'Urbanist', sans-serif;" [ngClass]="'text-white font-bold' + ' text-6xl'">1000</span>
+                                </div>
+                        </div>
+                    </p-panel>
+                </div>
+                
                 <div class="col-12">
                     <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
