--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,7 +1,10 @@
 <div class="card">
-    <p-menubar [model]="menuItems">
+    <p-menubar styleClass="font-bold text-lg" [model]="menuItems">
         <ng-template pTemplate="start">
-            <p-avatar image="assets/images/logo.png" styleClass="mr-2" size="large" />
+            <div class="flex justify-content-center align-items-center font-bold text-3xl">
+                <p-avatar image="assets/images/logo.png" styleClass="mr-2" size="xlarge" />
+                <span>VAHAN SAATHI</span>
+            </div>
         </ng-template>
         <ng-template pTemplate="item" let-item let-root="root">
             <a pRipple class="flex align-items-center p-menuitem-link">
@@ -16,10 +19,6 @@
             <div class="flex align-items-center gap-2">
                 <p-menu #menu [model]="profileItems" styleClass="w-full md:w-15rem" [popup]="true">
                     <ng-template pTemplate="start">
-                        <!-- <span class="inline-flex align-items-center gap-1 px-2 py-2">
-                            <img src="assets/images/logo.png" alt="logo" height="60" width="60"     />
-                            <span class="font-medium text-xl font-semibold">VAHAN<span class="text-primary">SATHI</span></span>
-                        </span> -->
                         <button pRipple
                             class="relative overflow-hidden w-full p-link flex align-items-center p-2 pl-3 text-color hover:surface-200 border-noround">
                             <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png"
@@ -30,30 +29,15 @@
                             </span>
                         </button>
                     </ng-template>
-                    <!-- <ng-template pTemplate="submenuheader" let-item>
-                        <span class="text-primary font-bold">{{ item.label }}</span>
-                    </ng-template> -->
                     <ng-template pTemplate="item" let-item>
                         <a pRipple class="flex align-items-center p-menuitem-link">
                             <span [class]="item.icon"></span>
                             <span class="ml-2">{{ item.label }}</span>
-                            <!-- <p-badge *ngIf="item.badge" class="ml-auto" [value]="item.badge" />
-                            <span *ngIf="item.shortcut" class="ml-auto border-1 surface-border border-round surface-100 text-xs p-1">{{ item.shortcut }}</span> -->
                         </a>
-                    </ng-template>
-                    <ng-template pTemplate="end">
-                        <!-- <button pRipple class="relative overflow-hidden w-full p-link flex align-items-center p-2 pl-3 text-color hover:surface-200 border-noround">
-                            <p-avatar image="https://primefaces.org/cdn/primeng/images/demo/avatar/amyelsner.png" class="mr-2" shape="circle" />
-                            <span class="inline-flex flex-column">
-                                <span class="font-bold">{{ userName }}</span>
-                                <span class="text-sm">{{ userRole }}</span>
-                            </span>
-                        </button> -->
                     </ng-template>
                 </p-menu>
                 <i pBadge style="font-size: 1.3rem" class="mr-3 pi pi-bell p-shake text-orange-500"
                     severity="danger"></i>
-                <!-- <p-button pBadge value="2" icon="pi pi-bell" [rounded]="true" [text]="true" severity="warning" /> -->
                 <p-button class="mr-3" [text]="true" (onClick)="menu.toggle($event)" icon="pi pi-user" [rounded]="true"
                     severity="primary" />
             </div>
@@ -65,6 +49,15 @@
     <div class="px-4 py-2 md:px-6 lg:px-8">
         <p-breadcrumb styleClass="border-none" class="max-w-full" [model]="breadCrumbs" [home]="home" />
     </div>
+
+
+
+    <ng-template pTemplate="footer">
+        <div class="gap-3 mt-1">
+                        <p-avatar image="assets/images/logo.png" styleClass="mr-2" size="xlarge" />
+
+        </div>
+    </ng-template>
 </div>
 
 <router-outlet></router-outlet>
